# xpto-terraform

./: .gitignore  README.md  set_aws_credentials.sh
.github/workflows/: terraform-lint-format.yml
environments/prod/: data.tf  locals.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
environments/tfstate/: main.tf  terraform.tfvars  variables.tf
modules/billing-report/: README.md  lambda_function.py  lambda_mock_test.py  main.tf  outputs.tf  pyproject.toml  variables.tf
modules/billing_report/: .pre-commit-config.yaml  README.md  data.tf  lambda_function.py  lambda_mock_test.py  main.tf  outputs.tf  pyproject.toml  requirements.txt  variables.tf
modules/lightsail_ansiv/: disable_lightsail.py  main.tf  outputs.tf  pyproject.toml  requirements.txt  variables.tf
modules/route53/: README.md  data.tf  main.tf  output.tf  terraform.tf  variables.tf
modules/static_website/: README.md  data.tf  disable_cloudfront.py  main.tf  outputs.tf  pyproject.toml  requirements.txt  terraform.tf  terraform.tfvars  varriables.tf
modules/static_website/content/: index.html  styles.css
modules/static_website/content/.well-known/: security.txt
modules/static_website/content/css/: styles.css
modules/static_website/content/favicon/: site.webmanifest
modules/static_website/content/resume/: index.html  resume.json
scripts/: set_aws_credentials.sh
