[project]
name = "aws-cost-explorer-lambda"
version = "0.1.0"
description = "AWS Cost Explorer Lambda function to report daily costs"
readme = "README.md"
requires-python = ">=3.12"
authors = ["kiraum <tfgoncalves@xpto.it>"]
dependencies = [
    "boto3",
    "black",
    "isort",
    "pylint",
    "ruff",
    "uv",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
disable = [
    "R0913",  # Too many arguments
    "R0917",  # Too many positional arguments
    "R0914",  # Too many local variables
    "W0718",  # Catching too general exception Exception
    "W0613",  # Unused argument
]

[tool.pylint.design]
max-args = 8
max-locals = 16

[tool.pylint.format]
max-line-length = 120
